fix infinite scroll on mobile with navbar browser

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
 body {
   font-family: sans-serif;
 }
+#controlHeight{
+  @apply w-0  h-screen absolute
+}
